--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <li>I’m on <a href="http://skype.com">Skype</a> as “dwingateb”;</li>
 <li>You can email me at “donblair at pvos dot org”.</li>
 </ul>
-<h1 id="wiki-notes">Wiki / Notes</h1>
+<h1 id="wiki-notes">Notes / Working Docs</h1>
 <p>If we’re collaborating on a project, and we’re sharing a document online, might very well find a link to it <a href="https://github.com/dwblair/dwblair.github.com/wiki">here</a>.</p>
 <!---
 ### Recent Photos
