--- a/packing/index.html
+++ b/packing/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0032)http://www.donblair.cc/circles1/ -->
 <html lang="en"><!-- for RTL change to: "he-IL" or "ar" ect. --><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-	<title>donblair.cc</title>
+	<title>packing</title>
 	<link rel="stylesheet" href="http://www.donblair.cc/circles1/css/squaresNoBorder.css">
  <script type="text/javascript" src="./processing-1.3.6.js"></script>
 
@@ -148,5 +148,6 @@ In order for the simulation to run, a file called "processing-1.3.6.js" needs to
 
 
 <p><p>
+Code repository <a href="https://github.com/dwblair/packing">here</a>.
 
 </body></html>
