--- a/packing/index.html
+++ b/packing/index.html
@@ -109,7 +109,7 @@ int counter=0;
     stroke(0);
     ellipse(x,y,2*r,2*r);
     fill(0,200,0);
-    text(counter,x-5,y+5);
+    //text(counter,x-5,y+5);
     counter=counter+1;
     i=i+1;
   }
