--- a/packing/index.html
+++ b/packing/index.html
@@ -104,12 +104,13 @@ int counter=0;
 
     //added radius bit
     r=p[2];
-
+    //int fillVal = (int)( ((r-10)/50.)*255);
+    //fill(fillVal,255,255);
     fill(255);
     stroke(0);
     ellipse(x,y,2*r,2*r);
     fill(0,200,0);
-    //text(counter,x-5,y+5);
+    text(counter,x-5,y+5);
     counter=counter+1;
     i=i+1;
   }
