edited html structures

--- a/packing/index4.html
+++ b/packing/index4.html
@@ -159,7 +159,10 @@ In order for the simulation to run, a file called "processing-1.3.6.js" needs to
 </p>
 -->
 
-
+Code repository <a href="https://github.com/dwblair/packing">here</a>.<p>
+- Initial <a href="http://dwblair.github.com/packing/index.html">expansion method</a>;<p>
+- Nearest neighbor <a href="http://dwblair.github.com/packing/index1.html">"cell" method</a>;<p>
+- "Cell" method <a href="http://dwblair.github.com/packing/index4.html">applied to larger system</a><p>
 
 <span style="position: absolute; top: 0px; left: 0px; opacity: 0; font-family: PjsEmptyFont, fantasy; ">AAAAAAAA</span>
 
