--- a/packing/index.html
+++ b/packing/index.html
@@ -142,13 +142,15 @@ In order for the simulation to run, a file called "processing-1.3.6.js" needs to
 </p>
 -->
 
+Code repository <a href="https://github.com/dwblair/packing">here</a>.<p>
+- Initial <a href="http://dwblair.github.com/packing/index.html">expansion method</a>;<p>
+- Nearest neighbor <a href="http://dwblair.github.com/packing/index.html">"cell" method</a>;<p>
+- "Cell" method <a href="http://dwblair.github.com/packing/index.html">applied to larger system</a><p>
 
 
 <span style="position: absolute; top: 0px; left: 0px; opacity: 0; font-family: PjsEmptyFont, fantasy; ">AAAAAAAA</span>
 
 
 
-<p><p>
-Code repository <a href="https://github.com/dwblair/packing">here</a>.
 
 </body></html>
