--- a/packing/packindex.html
+++ b/packing/packindex.html
@@ -5,157 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
     <title>dwblair.github.com - Packing</title>
     <link rel="stylesheet" type="text/css" href="./css/default.css"></link>
-    <script type="text/javascript" src="./processing-1.3.6.js"></script>
- <script type="text/javascript" src="./processing-1.3.6.js"></script>
-
-    <!--
-        This is a source-file-less sketch, loaded from inline source code in
-        the html header. This only works if the script specifies a data-processing-target
-    -->
-    <script type="text/processing" data-processing-target="targetcanvas">
-// below, the function "setup()" gets run once at the beginning, and thereafter the function "draw()" is run over and over again.
-
-
-int L=250;
-float inL;
-int numCircles;
-float circleRadius=10;
-float inR;
-
-//int numLines=0;
-int t=0;
-int i=0;
-int N=0;
-float x;
-float y;
-float r;
-
-String coords[];
-String params[];
-int numLines;
-
-//coords=loadStrings("./coords.txt");
-
-//String coords[]=loadStrings("./coords.txt");
-//int numLines = coords.length;
-
-
-
-void setup() {
-  
-  //frameRate(1);
-//background(0);
-//fill(0,255,0);
-paramsF=loadStrings("./params1.in");
-String thisLine=paramsF[1]; // the first line of the file will have the number of particles
-//text(4,width/2,height/2);
-float[] params=float(split(thisLine,','));
-N=int(params[0]);
-inL=float(params[1]);
-inR=float(params[2]);
-circleRadius=inR;
-
-size(inL,inL);
-  //int counter=0;
-  myFont=createFont("FFScala",10);
-  textFont(myFont);
-
-text("loading ...",width/2,height/2);
-
-coords=loadStrings("./coords1.txt");
-
-//String coords[]=loadStrings("./coords.txt");
-numLines = coords.length;
-
-/*
-String thisLine=coords[1]; // the first line of the file will have the number of particles
-//text(4,width/2,height/2);
-float[] params=float(split(thisLine,','));
-N=int(params[0]);
-inL=float(params[1]);
-inR=float(params[2]);
-circleRadius=inR;
-*/
-
-/*
-  size(inL,inL);
-  //int counter=0;
-  myFont=createFont("FFScala",12);
-  textFont(myFont); 
-*/
-
-  
-
-i=0; //need to fast forward to here
-}
-
-void draw() {
-background(200);
-
-//i=0;
-
-int counter=0;
-  while (counter<N) {
-    //text(i,width/2,height/2);
-    //int j = (N+1)*t+i+1;
-    //int j=i+1;
-    //text(3,width/2,height/2);
-    String thisLine = coords[i]; //inital +1 is because of '@' character; next one is because of "N" line at beginning of file
-    float[] p = float(split(thisLine, ','));
-    x=p[0];
-    y=p[1];
-    int cellNum = p[3];
-    //added radius bit
-    r=p[2];
-
-    fill(255);
-    stroke(0);
-    ellipse(x,y,2*r,2*r);
-    fill(255,0,0);
-    //text(counter,x-5,y+5);
-    text(cellNum,x-5,y+5);
-    counter=counter+1;
-    i=i+1;
-  }
-fill(0,0,0);
-text(t,width-50,height-10);
-String thisLine=coords[i];
-float[] p = float(split(thisLine, ' '));
-int time=p[1];
-int cellSize=p[2];
-stroke(255,0,0);
-int cellRow = 0;
-int cellColumn =0;
-while (cellColumn<(height/cellSize)) {
-cellRow=0;
-while (cellRow<(width/cellSize)) {
-line(0,cellSize*cellRow,width,cellSize*cellRow);
-cellRow++;
-}
-line(cellSize*cellColumn,0,cellSize*cellColumn,height);
-cellColumn++;
-}
-
-i=i+1; // for the '@' character
-//text(t,width/2,height/2);
-t=t+1; //update 
-
-if (i>=numLines) {
-i=0; //start at the beginning again
-t=0;
-}
-
-
-}
-
-
-
- </script>
-
   </head>
   <body>
-
-
 
     <div id="content">
       <div id="sidebar">
@@ -179,7 +30,6 @@ t=0;
       </div>
 
       <section id="main">
-	<canvas id="targetcanvas" style="border: 1px solid black; image-rendering: -webkit-optimize-contrast !important; " tabindex="0" width="250" height="290"></canvas></center>
 <!---
 <div style="float: right; padding: 2em;">
    <img src="/media/experiments.jpg" style="width: 150px;"/>
@@ -204,22 +54,13 @@ t=0;
  <li>   In practice, rather than changing the volume of the entire system, the periodic box in the simulations was kept at a constant size, and the radii of the individual circles were all rescaled, in order to achieve the desired new volume. </li>
  
 	     <li>For this initial instance of the code, the 'pressure schedule' is simplified to a simple 'jump' in pressure to the final pressure; this will be changed to a more elaborate pressure increase schedule after optimal step size parameters are determined.     </li>
-	    </ul>
-
-<h2 id="about">Thus far ...</h2>
-
-  <ul>
-	    <li> Simulated annealing code is <a href="https://github.com/dwblair/packing">on github</a>.</li>
-	     <li>Simulation data for pressure=
+	     
+	    <li>Simulation data for pressure=
 	      <a href="./coords0.html">10.</a>,
 	      <a href="./coords1.html">3.</a>,
-	      <a href="./coords2.html">2.</a>,
-	      <a href="./coords3.html">1.</a>,
-	      <a href="./coords4.html">0.5</a>,
-	      <a href="./coords5.html">0.1</a>
-	   
+	      <a href="./coords2.html">2.</a>
 	   </li>
-
+	    <li> <a href="https://github.com/dwblair/packing">Code repository.</a> </li>
 	    <li> Density vs sweep # for various pressures:</li>
 </ul>
 <p>
