--- a/packing/goodindex.html
+++ b/packing/goodindex.html
@@ -34,17 +34,19 @@ String coords[];
 String params[];
 int numLines;
 
+//coords=loadStrings("./coords.txt");
 
+//String coords[]=loadStrings("./coords.txt");
 //int numLines = coords.length;
 
-float scaling=.5;
+
 
 void setup() {
   
-frameRate(15);
+  //frameRate(1);
 //background(0);
 //fill(0,255,0);
-paramsF=loadStrings("./params.in");
+paramsF=loadStrings("./params1.in");
 String thisLine=paramsF[1]; // the first line of the file will have the number of particles
 //text(4,width/2,height/2);
 float[] params=float(split(thisLine,','));
@@ -53,15 +55,16 @@ inL=float(params[1]);
 inR=float(params[2]);
 circleRadius=inR;
 
-size(inL*scaling,inL*scaling+70);
+size(inL,inL);
   //int counter=0;
   myFont=createFont("FFScala",10);
   textFont(myFont);
 
 text("loading ...",width/2,height/2);
 
-coords=loadStrings("./coords000.txt");
+coords=loadStrings("./coords1.txt");
 
+//String coords[]=loadStrings("./coords.txt");
 numLines = coords.length;
 
 /*
@@ -101,24 +104,24 @@ int counter=0;
     float[] p = float(split(thisLine, ','));
     x=p[0];
     y=p[1];
-    int cellNum=p[3];
-
+    int cellNum = p[3];
     //added radius bit
     r=p[2];
 
     fill(255);
     stroke(0);
-    ellipse(x*scaling,y*scaling,2*r*scaling,2*r*scaling);
-    fill(0,200,0);
-    text(counter,x*scaling-5,y*scaling+5);
+    ellipse(x,y,2*r,2*r);
+    fill(255,0,0);
+    //text(counter,x-5,y+5);
+    text(cellNum,x-5,y+5);
     counter=counter+1;
     i=i+1;
- }
+  }
+fill(0,0,0);
+text(t,width-50,height-10);
 String thisLine=coords[i];
 float[] p = float(split(thisLine, ' '));
 int time=p[1];
-		    float pressure=p[3];
-		    float density=p[4];
 int cellSize=p[2];
 stroke(255,0,0);
 int cellRow = 0;
@@ -126,22 +129,13 @@ int cellColumn =0;
 while (cellColumn<(height/cellSize)) {
 cellRow=0;
 while (cellRow<(width/cellSize)) {
-//line(0,cellSize*cellRow,width,cellSize*cellRow);
+line(0,cellSize*cellRow,width,cellSize*cellRow);
 cellRow++;
 }
-//line(cellSize*cellColumn,0,cellSize*cellColumn,height);
+line(cellSize*cellColumn,0,cellSize*cellColumn,height);
 cellColumn++;
 }
-				 stroke(0,0,0);
-				 line(0.,inL*scaling,inL*scaling,inL*scaling);
-fill(255,0,0);
-				 text("density =",width-90,height-30);
-				 text(density,width-35,height-30);
-				 text("pressure =",width-90,height-50);
-				 text(pressure,width-30,height-50);
-				 
-text("sweep =",width-90,height-10);
-text(time,width-40,height-10);
+
 i=i+1; // for the '@' character
 //text(t,width/2,height/2);
 t=t+1; //update 
@@ -185,7 +179,6 @@ t=0;
       </div>
 
       <section id="main">
-	<center>
 	<canvas id="targetcanvas" style="border: 1px solid black; image-rendering: -webkit-optimize-contrast !important; " tabindex="0" width="250" height="290"></canvas></center>
 <!---
 <div style="float: right; padding: 2em;">
@@ -230,7 +223,7 @@ t=0;
 	    <li> Density vs sweep # for various pressures:</li>
 </ul>
 <p>
-<a href="./densityVsSweepNum.png"><img src="./densityVsSweepNum.png" style="width: 600px;" /></a> 
+<a href="./densityVsSweepNum.png"><img src="./densityVsSweepNum.png" style="width: 500px;" /></a> 
 	    
 
 <!---
