--- a/avp/index.html
+++ b/avp/index.html
@@ -29,7 +29,7 @@ float recoveryPoint=3;
 float recoverY=10;
 
 HScrollbar hs1, hs2;  // Two scrollbars
-PFont myFont;
+//PFont myFont;
 
 void setup() {
   size(640, 360);
