--- a/packing/simanneal/index.html
+++ b/packing/simanneal/index.html
@@ -39,7 +39,7 @@
 
 <h1 id="about">Comparing circle packing algorithms ...</h1>
 
-All data below are for the <b>simulated annealing</b> algorithm;  <b>parallel tempering</b> (soon), and <b>population annealing</b> (later), to follow.
+All data below are for the <b>simulated annealing</b> algorithm;  <b>parallel tempering</b> (soon) and <b>population annealing</b> (later) to follow.
 
   <ul>
 	    <li> Finding <a href="http://www2.stetson.edu/~efriedma/cirinsqu/">known best packings</a> of hard disks in a box, for various N:</br></br>
