--- a/packing/simanneal/n12.html
+++ b/packing/simanneal/n12.html
@@ -164,7 +164,7 @@ finished=1;
 <div class="square">
 <!--<center><a href="http://donblair.org/"><img src="images/plainIsing.png" alt="test" width=180 height=180> </a></center>-->
 <center>
-<img src='./N12.png' width=210>
+<img src='./N12.png' width=200> </br> d_p=.73867 </br> </br>
 <canvas id="targetcanvas" style="border: 1px solid black; image-rendering: -webkit-optimize-contrast !important; " tabindex="0" width="250" height="290"></canvas></center>
 </div>
 <!--
