--- a/packing/simanneal/n5.html
+++ b/packing/simanneal/n5.html
@@ -164,7 +164,7 @@ finished=1;
 <div class="square">
 <!--<center><a href="http://donblair.org/"><img src="images/plainIsing.png" alt="test" width=180 height=180> </a></center>-->
 <center>
-<img src='./N5.png' width=210>
+<img src='./N5.png' width=210> </br> d_p=.67388 </br> </br>
 <canvas id="targetcanvas" style="border: 1px solid black; image-rendering: -webkit-optimize-contrast !important; " tabindex="0" width="250" height="290"></canvas></center>
 </div>
 <!--
@@ -176,7 +176,6 @@ In order for the simulation to run, a file called "processing-1.3.6.js" needs to
 
 
 <span style="position: absolute; top: 0px; left: 0px; opacity: 0; font-family: PjsEmptyFont, fantasy; ">AAAAAAAA</span>
-
 
 
 </body></html>
