--- a/packing/simanneal/index.html
+++ b/packing/simanneal/index.html
@@ -179,8 +179,7 @@ finished=1;
 
 <h1 id="about">Comparing circle packing algorithms ...</h1>
 
-<a href="./TurtleRaces.jpg"><img src='./TurtleRaces.jpg' width=500></a> <p>
-    
+<a href="./TurtleRaces.jpg"><img src='./TurtleRaces.jpg' width=500></a>
 
 <p><p>
 Systems that undergo jamming constitute systems with very complex energy landscapes, making comparison of jamming algorithms difficult.  In the case of jamming, 'the jammed state' has a multiplicity of definitions [cite Torquato]; the properties and configurations of this state are highly sensitive to the dynamics of preparation and the criterion for full jamming.
@@ -242,7 +241,9 @@ Systems that undergo jamming constitute systems with very complex energy landsca
 -->
 
 
-
+ <a href="./turtle4.jpg"><img src='./turtle4.jpg' width=500></a> <p>
+     <a href="./turtle_race.jpg"><img src='./turtle_race.jpg' width=500></a> <p>
+	 <a href="./FL-KeyWest-TurtleRace1.jpg"><img src='./FL-KeyWest-TurtleRace1.jpg' width=500></a> <p>
 
       </section>
     </div>
