spheres on spheres

--- a/packing/spheres/index.html
+++ b/packing/spheres/index.html
@@ -1,2 +1,2 @@
 <img src="./spheres.gif"> </br>
-<img src="./densityVsSweepSpheres.png"> </br>
+<img src="./densityVsSweepSpheres.png" width=900> </br>
