--- a/packing/uvGallery.html
+++ b/packing/uvGallery.html
@@ -4,4 +4,12 @@
 <img src="uv_2.3.png" width=500><br>
 <img src="uv_3.5.png" width=500><br>
 <img src="uv_3.9.png" width=500><br>
+<img src="uv_1.1_flip.png" width=500><br>
+<img src="uv_1.5_flip.png" width=500><br>
+<img src="uv_1.9_flip.png" width=500><br>
+<img src="uv_2.3_flip.png" width=500><br>
+<img src="uv_2.7_flip.png" width=500><br>
+<img src="uv_3.1_flip.png" width=500><br>
+<img src="uv_3.5_flip.png" width=500><br>
+<img src="uv_3.9_flip.png" width=500><br>
 </html>
