--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>My Hakyll Blog - About</title>
+        <title>donblog -  About</title>
         <link rel="stylesheet" type="text/css" href="./css/default.css" />
     </head>
     <body>
