--- a/archive.html
+++ b/archive.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>My Hakyll Blog - Archives</title>
+        <title>donblog -  Archives</title>
         <link rel="stylesheet" type="text/css" href="./css/default.css" />
     </head>
     <body>
@@ -24,6 +24,9 @@
 
             <ul>
     <li>
+    <a href="./posts/2013-04-07-updates.html">Varia</a> - April  7, 2013
+</li>
+<li>
     <a href="./posts/2013-03-13-circle.html">Packing Algorithms</a> - March 13, 2013
 </li>
 
