--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>My Hakyll Blog - About</title>
+        <title>donblog -  About</title>
         <link rel="stylesheet" type="text/css" href="./css/default.css" />
     </head>
     <body>
@@ -26,7 +26,9 @@
 
 
 
-<p>My name is Don Blair. I’m a graduate student in <a href="http://www.physics.umass.edu/">Physics</a> at the <a href="http://www.umass.edu">University of Massachusetts</a>, a Fellow at the <a href="http://www.umass.edu/digitalcenter/">National Center for Digital Government</a>, a local organizer for <a href="http://publiclaboratory.org">The Public Laboratory for Open Technology and Science</a>, and a contributor to <a href="http://pvos.org">Pioneer Valley Open Science</a>. Other places to find me online:</p>
+<p>My name is Don Blair. I’m a graduate student in <a href="http://www.physics.umass.edu/">Physics</a> at the <a href="http://www.umass.edu">University of Massachusetts</a>, a Fellow at the <a href="http://www.umass.edu/digitalcenter/">National Center for Digital Government</a>, a local organizer for <a href="http://publiclaboratory.org">The Public Laboratory for Open Technology and Science</a>, and a contributor to <a href="http://pvos.org">Pioneer Valley Open Science</a>.</p>
+
+ Other places to find me online:</p>
 <ul>
 <li>I contribute to <a href="http://publiclaboratory.org">Public Lab</a> as “<a href="http://publiclaboratory.org/people/donblair">donblair</a>”;</li>
 <li>I post on <a href="http://pvos.org">Pioneer Valley Open Science</a> as “<a href="http://pvos.cc/?author=5">Don</a>”;</li>
@@ -47,12 +49,26 @@
 
 <ul>
     <li>
+    <a href="./posts/2013-04-07-updates.html">Varia</a> - April  7, 2013
+</li>
+<li>
     <a href="./posts/2013-03-13-circle.html">Packing Algorithms</a> - March 13, 2013
 </li>
 
 </ul>
 
 <p>…or you can find more in the <a href="./archive.html">archives</a>.
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-39933243-1', 'github.io');
+  ga('send', 'pageview');
+
+</script>
 
         </div>
 <!--        <div id="footer">
