--- a/archive.html
+++ b/archive.html
@@ -24,7 +24,7 @@
 
             <ul>
     <li>
-    <a href="./posts/2013-04-07-updates.html">Varia</a> - April  7, 2013
+    <a href="./posts/2013-04-07-updates.html">Updates</a> - April  7, 2013
 </li>
 <li>
     <a href="./posts/2013-03-13-circle.html">Packing Algorithms</a> - March 13, 2013
