--- a/archive.html
+++ b/archive.html
@@ -24,6 +24,9 @@
 
             <ul>
     <li>
+    <a href="./posts/2013-04-19-blogging.html">Bloggin' ...</a> - April 19, 2013
+</li>
+<li>
     <a href="./posts/2013-04-07-updates.html">Updates</a> - April  7, 2013
 </li>
 <li>
