--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
             </div>
             <div id="navigation">
                 <a href="./">Home</a>
-                <!--<a href="/about.html">About</a>
-                <a href="/contact.html">Contact</a>-->
+                <a href="./about.html">About</a>
+                <!--<a href="/contact.html">Contact</a>-->
                 <a href="./archive.html">Archive</a>
             </div>
         </div>
