--- a/archive.html
+++ b/archive.html
@@ -14,7 +14,7 @@
             <div id="navigation">
                 <a href="./">Home</a>
                 <!--<a href="/about.html">About</a>-->
-                <!--<a href="/contact.html">Contact</a>-->
+                <a href="./contact.html">Contact</a>
                 <a href="./archive.html">Archive</a>
             </div>
         </div>
@@ -24,13 +24,10 @@
 
             <ul>
     <li>
-    <a href="./posts/2013-04-19-blogging.html">Bloggin' ...</a> - April 19, 2013
+    <a href="./posts/2013-04-19-blogging.html"><img src="./images/blogging.jpg" style="margin: 5px;" align="middle" height="50">Bloggin' ...</a>
 </li>
 <li>
-    <a href="./posts/2013-04-07-updates.html">Updates</a> - April  7, 2013
-</li>
-<li>
-    <a href="./posts/2013-03-13-circle.html">Packing Algorithms</a> - March 13, 2013
+    <a href="./posts/2013-03-13-circle.html"><img src="./images/N5.png" style="margin: 5px;" align="middle" height="50">Packing Algorithms</a>
 </li>
 
 </ul>
