--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             <div id="navigation">
                 <a href="./">Home</a>
                 <!--<a href="/about.html">About</a>-->
-                <!--<a href="/contact.html">Contact</a>-->
+                <a href="./contact.html">Contact</a>
                 <a href="./archive.html">Archive</a>
             </div>
         </div>
@@ -22,7 +22,12 @@
         <div id="content">
             <h1>Contact</h1>
 
-            <ul>
+            <p><img src="./images/gloves.jpg" width="150" style="float: right; margin: 20px;" /></p>
+My name is Don Blair. I’m a graduate student in <a href="http://www.physics.umass.edu/">Physics</a> at the <a href="http://www.umass.edu">University of Massachusetts</a>, a Fellow at the <a href="http://www.umass.edu/digitalcenter/">National Center for Digital Government</a>, a local organizer for <a href="http://publiclaboratory.org">The Public Laboratory for Open Technology and Science</a>, and a contributor to <a href="http://pvos.org">Pioneer Valley Open Science</a>.
+</p>
+
+
+<ul>
 <li>
 I contribute to <a href="http://publiclaboratory.org">Public Lab</a> as “<a href="http://publiclaboratory.org/people/donblair">donblair</a>”;
 </li>
