--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>donblog -  </title>
+        <title>donblog -  Recent notes:</title>
         <link rel="stylesheet" type="text/css" href="./css/default.css" />
     </head>
     <body>
@@ -20,22 +20,57 @@
         </div>
 
         <div id="content">
-            <h1></h1>
+            <h1>Recent notes:</h1>
 
-            <ul>
-    <li>
-    <a href="./posts/2013-04-19-blogging.html"><img src="./images/blogging.jpg" style="margin: 5px;" align="middle" height="50" width="50">Bloggin' ...</a>
+            <table border="0">
+<!--<li>
+    <a href="/posts/2013-04-19-blogging.html"><img src="/images/blogging.jpg" style="margin: 5px;" align="middle" height=50 width=50>Bloggin' ...</a>
 </li>
-<li>
-    <a href="./posts/2013-04-07-updates.html"><img src="./images/rpibutton.png" style="margin: 5px;" align="middle" height="50" width="50">Updates</a>
-</li>
-<li>
-    <a href="./posts/2013-03-13-circle.html"><img src="./images/N5.png" style="margin: 5px;" align="middle" height="50" width="50">Packing Algorithms</a>
-</li>
+-->
 
-</ul>
+<!-- one row of the table -->
+<tr>
 
-Or you may be looking for a <a href="https://github.com/dwblair/dwblair.github.com/wiki">project</a> we're working on together. 
+<td> <a href="./posts/2013-04-19-blogging.html"><img src="./images/blogging.jpg" style="margin: 5px;" align="middle" width="100"></a> </td>
+
+<td> <b><a href="./posts/2013-04-19-blogging.html">Bloggin' ...</a></b> <i>-- April 19, 2013 </i> <br> Quick note on blogging. </td>
+
+
+</tr>
+<!--<li>
+    <a href="/posts/2013-04-07-updates.html"><img src="/images/rpibutton.png" style="margin: 5px;" align="middle" height=50 width=50>Updates</a>
+</li>
+-->
+
+<!-- one row of the table -->
+<tr>
+
+<td> <a href="./posts/2013-04-07-updates.html"><img src="./images/rpibutton.png" style="margin: 5px;" align="middle" width="100"></a> </td>
+
+<td> <b><a href="./posts/2013-04-07-updates.html">Updates</a></b> <i>-- April  7, 2013 </i> <br> Mostly about work on a Raspberry Pi project for Public Lab. </td>
+
+
+</tr>
+<!--<li>
+    <a href="/posts/2013-03-13-circle.html"><img src="/images/N5.png" style="margin: 5px;" align="middle" height=50 width=50>Packing Algorithms</a>
+</li>
+-->
+
+<!-- one row of the table -->
+<tr>
+
+<td> <a href="./posts/2013-03-13-circle.html"><img src="./images/N5.png" style="margin: 5px;" align="middle" width="100"></a> </td>
+
+<td> <b><a href="./posts/2013-03-13-circle.html">Packing Algorithms</a></b> <i>-- March 13, 2013 </i> <br> Some notes about some packing algorithms I've been working on recently. </td>
+
+
+</tr>
+
+</tr>
+</table>
+
+<br>
+... or you may be looking for a <a href="https://github.com/dwblair/dwblair.github.com/wiki">project</a> we're working on together. 
 
 
         </div>
