--- a/archive.html
+++ b/archive.html
@@ -22,18 +22,52 @@
         <div id="content">
             <h1>Archives</h1>
 
-            <ul>
-    <li>
-    <a href="./posts/2013-04-19-blogging.html"><img src="./images/blogging.jpg" style="margin: 5px;" align="middle" height="50" width="50">Bloggin' ...</a>
+            <table border="0">
+<!--<li>
+    <a href="/posts/2013-04-19-blogging.html"><img src="/images/blogging.jpg" style="margin: 5px;" align="middle" height=50 width=50>Bloggin' ...</a>
 </li>
-<li>
-    <a href="./posts/2013-04-07-updates.html"><img src="./images/rpibutton.png" style="margin: 5px;" align="middle" height="50" width="50">Updates</a>
-</li>
-<li>
-    <a href="./posts/2013-03-13-circle.html"><img src="./images/N5.png" style="margin: 5px;" align="middle" height="50" width="50">Packing Algorithms</a>
-</li>
+-->
 
-</ul>
+<!-- one row of the table -->
+<tr>
+
+<td> <a href="./posts/2013-04-19-blogging.html"><img src="./images/blogging.jpg" style="margin: 5px;" align="middle" width="100"></a> </td>
+
+<td> <b><a href="./posts/2013-04-19-blogging.html">Bloggin' ...</a></b> <i>-- April 19, 2013 </i> <br> Quick note on blogging. </td>
+
+
+</tr>
+<!--<li>
+    <a href="/posts/2013-04-07-updates.html"><img src="/images/rpibutton.png" style="margin: 5px;" align="middle" height=50 width=50>Updates</a>
+</li>
+-->
+
+<!-- one row of the table -->
+<tr>
+
+<td> <a href="./posts/2013-04-07-updates.html"><img src="./images/rpibutton.png" style="margin: 5px;" align="middle" width="100"></a> </td>
+
+<td> <b><a href="./posts/2013-04-07-updates.html">Updates</a></b> <i>-- April  7, 2013 </i> <br> Mostly about work on a Raspberry Pi project for Public Lab. </td>
+
+
+</tr>
+<!--<li>
+    <a href="/posts/2013-03-13-circle.html"><img src="/images/N5.png" style="margin: 5px;" align="middle" height=50 width=50>Packing Algorithms</a>
+</li>
+-->
+
+<!-- one row of the table -->
+<tr>
+
+<td> <a href="./posts/2013-03-13-circle.html"><img src="./images/N5.png" style="margin: 5px;" align="middle" width="100"></a> </td>
+
+<td> <b><a href="./posts/2013-03-13-circle.html">Packing Algorithms</a></b> <i>-- March 13, 2013 </i> <br> Some notes about some packing algorithms I've been working on recently. </td>
+
+
+</tr>
+
+</tr>
+</table>
 
         </div>
 <!--        <div id="footer">
