--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>donblog -  Recent notes:</title>
+        <title>donblog -  </title>
         <link rel="stylesheet" type="text/css" href="./css/default.css" />
     </head>
     <body>
@@ -14,15 +14,36 @@
             <div id="navigation">
                 <a href="./">Home</a>
                 <!--<a href="/about.html">About</a>-->
-                <a href="./contact.html">Contact</a>
+                <!--<a href="/contact.html">Contact</a>-->
                 <a href="./archive.html">Archive</a>
             </div>
         </div>
 
         <div id="content">
-            <h1>Recent notes:</h1>
+            <h1></h1>
 
-            <table border="0">
+            <img src="./images/gloves.jpg" width="150" style="float: right; margin: 20px;" />
+
+
+
+Hello! My name is Don Blair, and I’m a graduate student in <a href="http://www.physics.umass.edu/">Physics</a> at the <a href="http://www.umass.edu">University of Massachusetts</a>, a Fellow at the <a href="http://www.umass.edu/digitalcenter/">National Center for Digital Government</a>, a local organizer for <a href="http://publiclab.org">The Public Laboratory for Open Technology and Science</a>, and a contributor to <a href="http://pvos.org">Pioneer Valley Open Science</a>.</p>
+
+<b>Working Docs / Notes </b>: If we're collaborating and sharing documents online, you might find a link to them <a href="https://github.com/dwblair/dwblair.github.com/wiki">here</a>.
+
+<br><br>
+<b>Other places</b> to find me online:
+
+<ul>
+<li>I contribute to <a href="http://publiclaboratory.org">Public Lab</a> as “<a href="http://publiclaboratory.org/people/donblair">donblair</a>”;</li>
+<li>I post on <a href="http://pvos.org">Pioneer Valley Open Science</a> as “<a href="http://pvos.cc/?author=5">Don</a>”;</li>
+<li>I’m on <a href="http://github.com">github</a> as “<a href="http://github.com/dwblair">dwblair</a>”;</li>
+<li>I’m on <a href="http://twitter.com">Twitter</a> as “<a href="http://twitter.com/donwblair">donwblair</a>”;</li>
+<li>I’m on <a href="http://skype.com">Skype</a> as “dwingateb”;</li>
+<li>You can email me at “donblair at pvos dot org”.</li>
+</ul>
+
+<b>Recent Notes ...</b><br>
+<table border="0">
 <!--<li>
     <a href="/posts/2013-04-19-blogging.html"><img src="/images/blogging.jpg" style="margin: 5px;" align="middle" height=50 width=50>Bloggin' ...</a>
 </li>
@@ -69,8 +90,41 @@
 </tr>
 </table>
 
+
+
 <br>
-... or you may be looking for a <a href="https://github.com/dwblair/dwblair.github.com/wiki">project</a> we're working on together. 
+<a class="twitter-timeline" href="https://twitter.com/donwblair" data-widget-id="288107927313711106">Tweets by @donwblair</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+<!-- Start of Flickr Badge -->
+<style type="text/css">
+#flickr_badge_source_txt {padding:0; font: 11px Arial, Helvetica, Sans serif; color:#666666;}
+#flickr_badge_icon {display:block !important; margin:0 !important; border: 1px solid rgb(0, 0, 0) !important;}
+#flickr_icon_td {padding:0 5px 0 0 !important;}
+.flickr_badge_image {text-align:center !important;}
+.flickr_badge_image img {border: 1px solid black !important;}
+#flickr_badge_uber_wrapper {width:150px;}
+#flickr_www {display:block; text-align:center; padding:0 10px 0 10px !important; font: 11px Arial, Helvetica, Sans serif !important; color:#3993ff !important;}
+#flickr_badge_uber_wrapper a:hover,
+#flickr_badge_uber_wrapper a:link,
+#flickr_badge_uber_wrapper a:active,
+#flickr_badge_uber_wrapper a:visited {text-decoration:none !important; background:inherit !important;color:#3993ff;}
+#flickr_badge_wrapper {background-color:#ffffff;border: solid 1px #000000}
+#flickr_badge_source {padding:0 !important; font: 11px Arial, Helvetica, Sans serif !important; color:#666666 !important;}
+</style>
+<table id="flickr_badge_uber_wrapper" cellpadding="0" cellspacing="10" border="0"><tr><td><a href="http://www.flickr.com" id="flickr_www">www.<strong style="color:#3993ff">flick<span style="color:#ff1c92">r</span></strong>.com</a><table cellpadding="0" cellspacing="10" border="0" id="flickr_badge_wrapper">
+<script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?show_name=1&amp;count=10&amp;display=latest&amp;size=t&amp;layout=v&amp;source=user&amp;user=80184146%40N06"></script>
+<tr>
+<td id="flickr_badge_source" valign="center" align="center">
+<table cellpadding="0" cellspacing="0" border="0"><tr>
+<td width="10" id="flickr_icon_td"><a href="http://www.flickr.com/photos/80184146@N06/"><img id="flickr_badge_icon" alt="donblair's items" src="http://l.yimg.com/g/images/buddyicon.gif#80184146@N06" align="left" width="48" height="48"></a></td>
+<td id="flickr_badge_source_txt"><nobr>Go to</nobr> <a href="http://www.flickr.com/photos/80184146@N06/">donblair's photostream</a></td>
+</tr></table>
+</td>
+</tr>
+</table>
+</td></tr></table>
+<!-- End of Flickr Badge -->
 
 
         </div>
