--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Hello! My name is Don Blair, and I’m a graduate student in <a href="http://www
 <li>You can email me at “donblair at pvos dot org”.</li>
 </ul>
 
-<b>Recent Notes ...</b><br>
+<b>Recent Notes, Tweets, Pics ...</b><br>
 <table border="0">
 <!--<li>
     <a href="/posts/2013-04-19-blogging.html"><img src="/images/blogging.jpg" style="margin: 5px;" align="middle" height=50 width=50>Bloggin' ...</a>
