--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@ My name is Don Blair. I’m a graduate student in <a href="http://www.physics.um
 
 <ul>
 <li>
-I contribute to <a href="http://publiclaboratory.org">Public Lab</a> as “<a href="http://publiclaboratory.org/people/donblair">donblair</a>”;
+I contribute to <a href="http://publiclaboratory.org">Public Lab</a> as “<a href="http://publiclab.org/people/donblair">donblair</a>”;
 </li>
 <li>
-I post on <a href="http://pvos.org">Pioneer Valley Open Science</a> as “<a href="http://pvos.cc/?author=5">Don</a>”;
+I post on <a href="http://pvos.org">Pioneer Valley Open Science</a> as “<a href="http://pvos.org/?author=5">Don</a>”;
 </li>
 <li>
 I’m on <a href="http://github.com">github</a> as “<a href="http://github.com/dwblair">dwblair</a>”;
