--- a/index.html
+++ b/index.html
@@ -24,25 +24,22 @@
 
             <img src="./images/gloves.jpg" width="150" style="float: right; margin: 20px;" />
 
+Hi! My name is Don Blair, and I’m a graduate student in <a href="http://www.physics.umass.edu/">Physics</a> at the <a href="http://www.umass.edu">University of Massachusetts</a>, a Fellow at the <a href="http://www.umass.edu/digitalcenter/">National Center for Digital Government</a>, a local organizer for <a href="http://publiclaboratory.org">The Public Laboratory for Open Technology and Science</a>, and a co-founder of <a href="http://pvos.org">Pioneer Valley Open Science</a>.</p>
 
-
-Hello! My name is Don Blair, and I’m a graduate student in <a href="http://www.physics.umass.edu/">Physics</a> at the <a href="http://www.umass.edu">University of Massachusetts</a>, a Fellow at the <a href="http://www.umass.edu/digitalcenter/">National Center for Digital Government</a>, a local organizer for <a href="http://publiclab.org">The Public Laboratory for Open Technology and Science</a>, and a contributor to <a href="http://pvos.org">Pioneer Valley Open Science</a>.</p>
-
-<b>Working Docs / Notes </b>: If we're collaborating and sharing documents online, you might find a link to them <a href="https://github.com/dwblair/dwblair.github.com/wiki">here</a>.
-
-<br><br>
-<b>Other places</b> to find me online:
 
 <ul>
-<li>I contribute to <a href="http://publiclaboratory.org">Public Lab</a> as “<a href="http://publiclaboratory.org/people/donblair">donblair</a>”;</li>
-<li>I post on <a href="http://pvos.org">Pioneer Valley Open Science</a> as “<a href="http://pvos.cc/?author=5">Don</a>”;</li>
+<li>I contribute to <a href="http://publiclaboratory.org">Public Lab</a> as “<a href="http://publiclab.org/people/donblair">donblair</a>”;</li>
+<li>I post on <a href="http://pvos.org">Pioneer Valley Open Science</a> as &quot;Don&quot;;</li>
 <li>I’m on <a href="http://github.com">github</a> as “<a href="http://github.com/dwblair">dwblair</a>”;</li>
 <li>I’m on <a href="http://twitter.com">Twitter</a> as “<a href="http://twitter.com/donwblair">donwblair</a>”;</li>
 <li>I’m on <a href="http://skype.com">Skype</a> as “dwingateb”;</li>
 <li>You can email me at “donblair at pvos dot org”.</li>
 </ul>
 
-<b>Recent Notes, Tweets, Pics ...</b><br>
+
+<b>Working Docs / Notes </b>: If we're collaborating and sharing documents online, you might find a link to them <a href="https://github.com/dwblair/dwblair.github.com/wiki">here</a>.
+<br><br>
+<b>Recent Notes, Tweets, Pics ...</b><br><br>
 <table border="0">
 <!--<li>
     <a href="/posts/2013-04-19-blogging.html"><img src="/images/blogging.jpg" style="margin: 5px;" align="middle" height=50 width=50>Bloggin' ...</a>
@@ -89,8 +86,6 @@ Hello! My name is Don Blair, and I’m a graduate student in <a href="http://www
 
 </tr>
 </table>
-
-
 
 <br>
 <a class="twitter-timeline" href="https://twitter.com/donwblair" data-widget-id="288107927313711106">Tweets by @donwblair</a>
