--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <img src="./images/gloves.jpg" width="150" style="float: right; margin: 20px;" />
 
-Hi! My name is Don Blair, and I’m a graduate student in <a href="http://www.physics.umass.edu/">Physics</a> at the <a href="http://www.umass.edu">University of Massachusetts</a>, a Fellow at the <a href="http://www.umass.edu/digitalcenter/">National Center for Digital Government</a>, a local organizer for <a href="http://publiclaboratory.org">The Public Laboratory for Open Technology and Science</a>, and a co-founder of <a href="http://pvos.org">Pioneer Valley Open Science</a>.</p>
+<b>Hello!</b> My name is Don Blair, and I’m a graduate student in <a href="http://www.physics.umass.edu/">Physics</a> at the <a href="http://www.umass.edu">University of Massachusetts</a>, a Fellow at the <a href="http://www.umass.edu/digitalcenter/">National Center for Digital Government</a>, a local organizer for <a href="http://publiclaboratory.org">The Public Laboratory for Open Technology and Science</a>, and a co-founder of <a href="http://pvos.org">Pioneer Valley Open Science</a>.</p>
 
 
 <ul>
@@ -39,8 +39,22 @@ Hi! My name is Don Blair, and I’m a graduate student in <a href="http://www.ph
 
 <b>Working Docs / Notes </b>: If we're collaborating and sharing documents online, you might find a link to them <a href="https://github.com/dwblair/dwblair.github.com/wiki">here</a>.
 <br><br>
-<b>Recent Notes, Tweets, Pics ...</b><br><br>
+<b>Recent Notes, Tweets, Pics ...</b><br>
 <table border="0">
+<!--<li>
+    <a href="/posts/2013-04-21-diy.html"><img src="/images/pvos.png" style="margin: 5px;" align="middle" height=50 width=50>DIY</a>
+</li>
+-->
+
+<!-- one row of the table -->
+<tr>
+
+<td> <a href="./posts/2013-04-21-diy.html"><img src="./images/pvos.png" style="margin: 5px;" align="middle" width="100"></a> </td>
+
+<td> <b><a href="./posts/2013-04-21-diy.html">DIY</a></b> <i>-- April 21, 2013 </i> <br> Notes on open hardware, the DIY movement, and a mission statement for PVOS. </td>
+
+
+</tr>
 <!--<li>
     <a href="/posts/2013-04-19-blogging.html"><img src="/images/blogging.jpg" style="margin: 5px;" align="middle" height=50 width=50>Bloggin' ...</a>
 </li>
