--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="content">
             <h1></h1>
 
-            <img src="./images/gloves.jpg" width="150" style="float: right; margin: 20px;" />
+            <img src="./images/plosbio.png" width="150" style="float: right; margin: 20px;" />
 
 <b>Hello!</b> My name is Don Blair, and I’m a graduate student in <a href="http://www.physics.umass.edu/">Physics</a> at the <a href="http://www.umass.edu">University of Massachusetts</a>, a Fellow at the <a href="http://www.umass.edu/digitalcenter/">National Center for Digital Government</a>, a local organizer for <a href="http://publiclaboratory.org">The Public Laboratory for Open Technology and Science</a>, and a co-founder of <a href="http://pvos.org">Pioneer Valley Open Science</a>.</p>
 
