--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
 <b>Recent Notes, Tweets, Pics ...</b><br>
 <table border="0">
 <!--<li>
+    <a href="/posts/2013-04-23-OLM.html"><img src="/images/olmbreadboard.png" style="margin: 5px;" align="middle" height=50 width=50>OLM Notes</a>
+</li>
+-->
+
+<!-- one row of the table -->
+<tr>
+
+<td> <a href="./posts/2013-04-23-OLM.html"><img src="./images/olmbreadboard.png" style="margin: 5px;" align="middle" width="100"></a> </td>
+
+<td> <b><a href="./posts/2013-04-23-OLM.html">OLM Notes</a></b> <i>-- April 23, 2013 </i> <br> Breadboarding the OLM; Next steps ... </td>
+
+
+</tr>
+<!--<li>
     <a href="/posts/2013-04-19-blogging.html"><img src="/images/blogging.jpg" style="margin: 5px;" align="middle" height=50 width=50>Bloggin' ...</a>
 </li>
 -->
