--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 
 </tr>
 <!--<li>
-    <a href="/posts/2013-04-19-blogging.html"><img src="/images/blogging.jpg" style="margin: 5px;" align="middle" height=50 width=50>Bloggin' ...</a>
+    <a href="/posts/2013-04-22-ircam.html"><img src="/images/raspberry.png" style="margin: 5px;" align="middle" height=50 width=50>Ircam Buttons and Motors</a>
 </li>
 -->
 
 <!-- one row of the table -->
 <tr>
 
-<td> <a href="./posts/2013-04-19-blogging.html"><img src="./images/blogging.jpg" style="margin: 5px;" align="middle" width="100"></a> </td>
+<td> <a href="./posts/2013-04-22-ircam.html"><img src="./images/raspberry.png" style="margin: 5px;" align="middle" width="100"></a> </td>
 
-<td> <b><a href="./posts/2013-04-19-blogging.html">Bloggin' ...</a></b> <i>-- April 19, 2013 </i> <br> Quick note on blogging. </td>
+<td> <b><a href="./posts/2013-04-22-ircam.html">Ircam Buttons and Motors</a></b> <i>-- April 22, 2013 </i> <br> Notes on buttons and motors on a Raspberry Pi </td>
 
 
 </tr>
