--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
 <b>Recent Notes, Tweets, Pics ...</b><br>
 <table border="0">
 <!--<li>
+    <a href="/posts/2013-05-13-OLM.html"><img src="/images/arrival.JPG" style="margin: 5px;" align="middle" height=50 width=50>OLM Arrives!</a>
+</li>
+-->
+
+<!-- one row of the table -->
+<tr>
+
+<td> <a href="./posts/2013-05-13-OLM.html"><img src="./images/arrival.JPG" style="margin: 5px;" align="middle" width="100"></a> </td>
+
+<td> <b><a href="./posts/2013-05-13-OLM.html">OLM Arrives!</a></b> <i>-- May 13, 2013 </i> <br> Circuit boards are here! </td>
+
+
+</tr>
+<!--<li>
     <a href="/posts/2013-04-23-OLM.html"><img src="/images/olmbreadboard.png" style="margin: 5px;" align="middle" height=50 width=50>OLM Notes</a>
 </li>
 -->
@@ -56,14 +70,14 @@
 
 </tr>
 <!--<li>
-    <a href="/posts/2013-04-22-ircam.html"><img src="/images/raspberry.png" style="margin: 5px;" align="middle" height=50 width=50>Ircam Buttons and Motors</a>
+    <a href="/posts/2013-04-22-ircam.html"><img src="/images/overlord.png" style="margin: 5px;" align="middle" height=50 width=50>Ircam Buttons and Motors</a>
 </li>
 -->
 
 <!-- one row of the table -->
 <tr>
 
-<td> <a href="./posts/2013-04-22-ircam.html"><img src="./images/raspberry.png" style="margin: 5px;" align="middle" width="100"></a> </td>
+<td> <a href="./posts/2013-04-22-ircam.html"><img src="./images/overlord.png" style="margin: 5px;" align="middle" width="100"></a> </td>
 
 <td> <b><a href="./posts/2013-04-22-ircam.html">Ircam Buttons and Motors</a></b> <i>-- April 22, 2013 </i> <br> Notes on buttons and motors on a Raspberry Pi </td>
 
