--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <li>I’m on <a href="http://github.com">github</a> as “<a href="http://github.com/dwblair">dwblair</a>”;</li>
 <li>I’m on <a href="http://twitter.com">Twitter</a> as “<a href="http://twitter.com/donwblair">donwblair</a>”;</li>
 <li>I’m on <a href="http://skype.com">Skype</a> as “dwingateb”;</li>
-<li>You can email me at “donblair at pvos dot org”.</li>
+<li>Please email me at “donblair at pvos dot org”.</li>
 </ul>
 
 
