--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
               <div class="contact">
                 <p>
                   Don Blair<br />
-                  donblair at pvos dot org 
+                  donblair at pvos dot org </br>
+		  Amherst, MA
                 </p>
               </div>
               <div class="contact">
