--- a/old_index.html
+++ b/old_index.html
@@ -12,10 +12,17 @@
   <![endif]-->
 </head>
 <body>
+<h2 id="notes-and-observations">Notes and observations</h2>
 <p><img src="resources/profile_pic.png" id="profile_pic"/></p>
-<h1 id="notes">Notes</h1>
-<p><strong><a href="blockchain1.html">Blockchain 001</a></strong>. Thoughts on how and whether the blockchain enhances autonomy and solidarity.</p>
-<p><strong><a href="blockchain1.html">Blockchain 002</a></strong>. How to use the blockchain in particular applications.</p>
+<p>Don Blair<br />
+<a href="http://edgecollective.io">Edge Collective</a><br />
+E-mail: donblair at gmail dot com<br />
+Twitter: <span class="citation" data-cites="donwblair">@donwblair</span><br />
+Github: dwblair</p>
+<p> </p>
+<p><a href="section1.html">Section1</a></p>
+<p><a href="section2.html">Section2</a></p>
+<p><a href="section3.html">Section3</a></p>
 <p> </p>
 <p> </p>
 <hr />
